<?xml version="1.0"?>
<package format="2">
  <name>decklink_ros</name>
  <version>0.0.0</version>
  <description>The decklink_ros package</description>
  <maintainer email="m.huber_1994@hotmail.de">martin</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>opencv2</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>camera_info_manager</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>image_proc</exec_depend>
</package>
